--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 #root{
   text-align: center;
-} 
+}
+.App{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+
+}
+span{
+  color: red;
+ font-size: 1.1em;
+}
